welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:26: error: type mismatch;
 found   : String
 required: Int
      setCouleurBrosse(T(i+m))
                          ^